Fix eclipse warnings and add java documentation, part 2 (#1670) (#1674)